--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A GIPHY Seach Engine"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Search in a GIPHY</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
