--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
-    <title>Search in a GIPHY</title>
+    <title>GIPHY in a JIFFY</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
